@@ -3,6 +3,11 @@
 * Implement the activation functions defined in fann_activation.h
 * More checks to see if train data is properly formatted in the file (some have experienced nasty problems because a number was missing in one line).
 * C++ wrapper.
-* C# wrapper.
+* DLL.
+* COM Component.
+* Wrappers for other languages.
 * Implement optimal brain damage.
 * Write GTK+ interface
+* Allow recurrent networks.
+
+If you want to contribute to the library, please contact me at lukesky@diku.dk
