@@ -1,5 +1,5 @@
 AC_INIT(src/fann.c)
-AM_INIT_AUTOMAKE(fann, 1.1.0)
+AM_INIT_AUTOMAKE(fann, 1.2.0)
 AM_CONFIG_HEADER(src/include/config.h:config.in)
 AC_PROG_RANLIB  
 AC_PROG_CC
