@@ -10,21 +10,15 @@ Section: libdevel
 Architecture: any
 Depends: libfann1 (= ${Source-Version})
 Description: Fast Artificial Neural Network Library, Development files
- fann is implemented in ANSI C. The library implements multilayer
- feedforward networks with support for both fully connected and sparse
- connected networks. Fann offers support for execution in fixed point
- arithmetic to allow for fast execution on systems with no floating
- point processor. To overcome the problems of integer overflow, the
- library calculates a position of the decimal point after training and
- guarantees that integer overflow can not occur with this decimal
- point.
+ Fast Artificial Neural Network Library implements multilayer
+ artificial neural networks in C with support for both fully connected
+ and sparsely connected networks. Cross-platform execution in both
+ fixed and floating point are supported. It includes a framework for
+ easy handling of training data sets. It is easy to use, versatile,
+ well documented, and fast. PHP and Python bindings are available.
  .
- The library is designed to be fast, versatile and easy to use. Several
- benchmarks have been executed to test the performance of the
- library. The results show that the fann library is significantly
- faster than other libraries on systems without a floating point
- processor, while the performance was comparable to other highly
- optimized libraries on systems with a floating point processor.
+ A reference manual accompanies the library with examples and
+ recommendations on how to use the library.
  .
  This package contains the header files and static libraries which is
  needed for developing the libfann applications.
@@ -35,20 +29,11 @@ Architecture: any
 Depends: ${shlibs:Depends}
 Suggests: libfann1-dev (= ${Source-Version})
 Description: Fast Artificial Neural Network Library (fann)
- fann is implemented in ANSI C. The library implements multilayer
- feedforward networks with support for both fully connected and sparse
- connected networks. Fann offers support for execution in fixed point
- arithmetic to allow for fast execution on systems with no floating
- point processor. To overcome the problems of integer overflow, the
- library calculates a position of the decimal point after training and
- guarantees that integer overflow can not occur with this decimal
- point.
- .
- The library is designed to be fast, versatile and easy to use. Several
- benchmarks have been executed to test the performance of the
- library. The results show that the fann library is significantly
- faster than other libraries on systems without a floating point
- processor, while the performance was comparable to other highly
- optimized libraries on systems with a floating point processor.
+ Fast Artificial Neural Network Library implements multilayer
+ artificial neural networks in C with support for both fully connected
+ and sparsely connected networks. Cross-platform execution in both
+ fixed and floating point are supported. It includes a framework for
+ easy handling of training data sets. It is easy to use, versatile,
+ well documented, and fast.
  . 
  This package contains the shared libraries.
