@@ -35,7 +35,7 @@ int main()
 	const unsigned int num_input = 2;
 	const unsigned int num_output = 1;
 	const unsigned int num_layers = 3;
-	const unsigned int num_neurons_hidden = 2;
+	const unsigned int num_neurons_hidden = 3;
 	const float desired_error = (const float)0.001;
 	const unsigned int max_iterations = 300000;
 	const unsigned int iterations_between_reports = 1000;
