@@ -1,1 +1,1 @@
-For news, go to http://sourceforge.net/projects/fann/
+For news, go to http://fann.sourceforge.net
